# =============================================================================
# ðŸ“¦ é¡¹ç›®å…ƒä¿¡æ¯
# =============================================================================
[project]
name = "cn-futures-auto-trader"
version = "0.4.0"
requires-python = ">=3.11"
description = "ä¸­å›½æœŸè´§è‡ªåŠ¨äº¤æ˜“ç³»ç»Ÿ - é«˜è´¨é‡ä»£ç æ ‡å‡†"
readme = "README.md"
license = { text = "MIT" }
keywords = ["futures", "trading", "quant", "ctp", "china"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

# =============================================================================
# ðŸ”§ Ruff - å¹³è¡¡çš„é™æ€åˆ†æžé…ç½®
# =============================================================================
[tool.ruff]
line-length = 120
target-version = "py311"
respect-gitignore = true
fix = true
unsafe-fixes = false
show-fixes = true
cache-dir = ".cache/ruff"
output-format = "grouped"

extend-exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ç²¾é€‰è§„åˆ™é›† - é«˜ä»·å€¼ + ä½Žå™ªéŸ³
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
select = [
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    # æ ¸å¿ƒè§„åˆ™ï¼ˆå¿…é€‰ï¼Œå‘çŽ°çœŸæ­£çš„é—®é¢˜ï¼‰
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    "F",        # Pyflakes - è¯­æ³•å’ŒåŸºç¡€é”™è¯¯ï¼Œå¿…é€‰
    "E",        # pycodestyle errors - ä»£ç é£Žæ ¼é”™è¯¯
    "W",        # pycodestyle warnings - ä»£ç é£Žæ ¼è­¦å‘Š
    "C90",      # mccabe - åœˆå¤æ‚åº¦ï¼Œé˜²æ­¢è¿‡åº¦å¤æ‚å‡½æ•°
    "I",        # isort - å¯¼å…¥æŽ’åºï¼Œä¿æŒä¸€è‡´æ€§
    "N",        # pep8-naming - å‘½åè§„èŒƒ
    "UP",       # pyupgrade - ä½¿ç”¨çŽ°ä»£Pythonè¯­æ³•
    
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    # è´¨é‡è§„åˆ™ï¼ˆé«˜ä»·å€¼ï¼‰
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    "B",        # flake8-bugbear - å‘çŽ°å¸¸è§bug
    "S",        # flake8-bandit - å®‰å…¨æ£€æŸ¥ï¼Œäº¤æ˜“ç³»ç»Ÿå¿…é€‰
    "A",        # flake8-builtins - é˜²æ­¢è¦†ç›–å†…ç½®åç§°
    "C4",       # flake8-comprehensions - æŽ¨å¯¼å¼ä¼˜åŒ–
    "DTZ",      # flake8-datetimez - æ—¶åŒºå®‰å…¨ï¼ˆä½†æˆ‘ä»¬ä¼šé’ˆå¯¹æ€§å¿½ç•¥ï¼‰
    "T10",      # flake8-debugger - ç¦æ­¢é—ç•™debugger
    "EM",       # flake8-errmsg - é”™è¯¯æ¶ˆæ¯è§„èŒƒ
    "PIE",      # flake8-pie - æ‚é¡¹æ”¹è¿›
    "RSE",      # flake8-raise - å¼‚å¸¸è§„èŒƒ
    "RET",      # flake8-return - è¿”å›žå€¼è§„èŒƒ
    "PTH",      # flake8-use-pathlib - æŽ¨èä½¿ç”¨pathlib
    "PL",       # Pylintå­é›† - æœ‰ä»·å€¼çš„æ£€æŸ¥
    "PERF",     # Perflint - æ€§èƒ½é—®é¢˜æ£€æµ‹
    "FURB",     # refurb - çŽ°ä»£åŒ–å»ºè®®
    "RUF",      # Ruffä¸“æœ‰è§„åˆ™
    
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    # å¯é€‰è§„åˆ™ï¼ˆæŒ‰éœ€å¯ç”¨ï¼‰
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    "ASYNC",    # å¼‚æ­¥ä»£ç æ£€æŸ¥
    "BLE",      # ç¦æ­¢ç›²ç›®except
    "ISC",      # éšå¼å­—ç¬¦ä¸²æ‹¼æŽ¥æ£€æŸ¥
    "ICN",      # å¯¼å…¥çº¦å®š
    "LOG",      # æ—¥å¿—è§„èŒƒ
    "G",        # æ—¥å¿—æ ¼å¼
    "PT",       # pytesté£Žæ ¼
    "Q",        # å¼•å·è§„èŒƒ
    "TID",      # å¯¼å…¥æ•´æ´
    "ARG",      # æœªä½¿ç”¨å‚æ•°
    "PGH",      # pygrepé’©å­
    "TRY",      # å¼‚å¸¸å¤„ç†è§„èŒƒ
    "FLY",      # f-stringæŽ¨è
    "NPY",      # NumPyè§„èŒƒ
]

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ä¸å¯ç”¨çš„è§„åˆ™ï¼ˆæœ‰æ˜Žç¡®ç†ç”±ï¼‰
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# "D"     - pydocstyle: ä¸å¼ºåˆ¶æ‰€æœ‰å‡½æ•°éƒ½æœ‰docstringï¼ŒæŒ‰æ¨¡å—æŽ§åˆ¶
# "ANN"   - annotations: ä½¿ç”¨MyPyæ£€æŸ¥ç±»åž‹ï¼Œé¿å…é‡å¤
# "FBT"   - boolean-trap: å¯¹ç®€å•å‡½æ•°è¿‡äºŽä¸¥æ ¼
# "CPY"   - copyright: å†…éƒ¨é¡¹ç›®æ— éœ€
# "ERA"   - eradicate: å¯èƒ½è¯¯åˆ æœ‰ç”¨çš„æ³¨é‡Šä»£ç 
# "TD"    - todos: TODOæ˜¯æ­£å¸¸çš„å¼€å‘å®žè·µ
# "FIX"   - fixme: åŒä¸Š
# "INP"   - no-pep420: é™åˆ¶è¿‡å¤š
# "PD"    - pandas-vet: pandasä½¿ç”¨åœºæ™¯ç‰¹æ®Š
# "SLF"   - private-access: æµ‹è¯•éœ€è¦è®¿é—®ç§æœ‰æˆå‘˜
# "TCH"   - type-checking: ä¸Žå®žé™…å¼€å‘æ¨¡å¼å†²çªè¾ƒå¤š
# "YTT"   - 2020: ä»·å€¼ä¸é«˜

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# å¿½ç•¥è§„åˆ™ - æ¯æ¡éƒ½æœ‰æ˜Žç¡®ç†ç”±
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
ignore = [
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    # äº¤æ˜“ç³»ç»Ÿä¸šåŠ¡éœ€æ±‚
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    "PLR0913",  # å…è®¸>5å‚æ•° | CTP APIæŽ¥å£éœ€è¦å¤šå‚æ•°
    "PLR2004",  # å…è®¸é­”æ³•æ•°å­— | äº¤æ˜“å¸¸é‡å¦‚tick_sizeã€ä¿è¯é‡‘çŽ‡
    "DTZ005",   # datetime.now()æ— tz | ä¸­å›½æœŸè´§ä½¿ç”¨æœ¬åœ°æ—¶é—´CST
    "DTZ006",   # datetime.fromtimestampæ— tz | åŒä¸Š
    
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    # å®žç”¨ä¸»ä¹‰è±å…
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    "TRY003",   # é•¿å¼‚å¸¸æ¶ˆæ¯ | ä¸­æ–‡é”™è¯¯æè¿°éœ€è¦è¯¦ç»†
    "EM101",    # å¼‚å¸¸å­—ç¬¦ä¸²å­—é¢é‡ | ç®€å•åœºæ™¯å…è®¸
    "EM102",    # å¼‚å¸¸f-string | éœ€è¦åŠ¨æ€é”™è¯¯ä¿¡æ¯
    "S101",     # assertè¯­å¥ | ç”¨äºŽå¼€å‘æ—¶çš„é˜²å¾¡æ€§æ£€æŸ¥
    
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    # æ¡†æž¶å…¼å®¹
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    "B008",     # é»˜è®¤å‚æ•°è°ƒç”¨ | FastAPI Dependsæ¨¡å¼
    
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    # ä¸­æ–‡æ”¯æŒ
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    "RUF001",   # Unicodeæ··ç”¨ | ä¸­æ–‡å­—ç¬¦ä¸²
    "RUF002",   # ä¸­æ–‡æ ‡ç‚¹ | ä¸­æ–‡æ³¨é‡Š
    "RUF003",   # ä¸­æ–‡æ³¨é‡Š | ä¸­æ–‡æ–‡æ¡£
    
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    # ä»£ç é£Žæ ¼åå¥½
    # â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    "PLR0911",  # å¤šreturnè¯­å¥ | æå‰è¿”å›žæ¨¡å¼æ›´æ¸…æ™°
    "PLR0912",  # å¤šåˆ†æ”¯ | å¤æ‚ä¸šåŠ¡é€»è¾‘éœ€è¦
    "PLR0915",  # å¤šè¯­å¥ | åŒä¸Š
    "PLW2901",  # å¾ªçŽ¯å˜é‡è¦†ç›– | æœ‰æ—¶æ˜¯æœ‰æ„ä¸ºä¹‹
    "SIM108",   # ä¸‰å…ƒè¡¨è¾¾å¼ | å¯è¯»æ€§ä¼˜å…ˆ
    "RET504",   # èµ‹å€¼åŽreturn | è°ƒè¯•æ–¹ä¾¿
]

# å…è®¸è‡ªåŠ¨ä¿®å¤
fixable = ["ALL"]

# ç¦æ­¢è‡ªåŠ¨ä¿®å¤ï¼ˆéœ€äººå·¥ç¡®è®¤ï¼‰
unfixable = [
    "F401",     # æœªä½¿ç”¨å¯¼å…¥ - å¯èƒ½æ˜¯é¢„ç•™çš„
    "F841",     # æœªä½¿ç”¨å˜é‡ - å¯èƒ½æ˜¯è°ƒè¯•ç”¨
]

# æ··æ·†å­—ç¬¦ï¼ˆä¸­æ–‡æ ‡ç‚¹ï¼‰
allowed-confusables = ["ï¼Œ", "ã€‚", "ï¼š", "ï¼›", "ï¼", "ï¼Ÿ", "ï¼ˆ", "ï¼‰", "ã€", "ã€‘"]

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# æ–‡ä»¶çº§é…ç½®
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
[tool.ruff.lint.per-file-ignores]
# æµ‹è¯•æ–‡ä»¶ - å®½æ¾
"tests/**/*.py" = [
    "S101",     # å…è®¸assert
    "PLR2004",  # å…è®¸é­”æ³•æ•°å­—
    "ARG001",   # å…è®¸æœªä½¿ç”¨å‚æ•°ï¼ˆfixturesï¼‰
    "ARG002",   # åŒä¸Š
]

# è„šæœ¬æ–‡ä»¶ - å®½æ¾
"scripts/**/*.py" = [
    "T201",     # å…è®¸print
    "S603",     # å…è®¸subprocess
    "S607",     # å…è®¸éƒ¨åˆ†è·¯å¾„
]

# CLIå…¥å£
"src/**/cli/**/*.py" = [
    "T201",     # å…è®¸print
]

# conftest
"conftest.py" = [
    "ARG001",
    "ARG002",
]

# ç±»åž‹å­˜æ ¹
"*.pyi" = [
    "ARG001",
    "ARG002",
]

[tool.ruff.lint.mccabe]
max-complexity = 12  # é€‚åº¦æ”¾å®½ï¼Œå¤æ‚ä¸šåŠ¡å…è®¸12

[tool.ruff.lint.pylint]
max-args = 8           # CTPæŽ¥å£éœ€è¦
max-branches = 15      # å¤æ‚ä¸šåŠ¡é€»è¾‘
max-returns = 8        
max-statements = 60    
max-locals = 20        
max-public-methods = 25
max-bool-expr = 5

[tool.ruff.lint.isort]
known-first-party = ["src"]
known-third-party = ["fastapi", "pydantic", "numpy", "pandas"]
force-single-line = false
force-sort-within-sections = true
lines-after-imports = 2
section-order = [
    "future",
    "standard-library", 
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type", "input", "format", "hash", "filter", "map", "list", "dict", "set"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
parametrize-names-type = "tuple"
parametrize-values-type = "list"

[tool.ruff.lint.flake8-import-conventions.aliases]
numpy = "np"
pandas = "pd"
"matplotlib.pyplot" = "plt"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

# =============================================================================
# ðŸ” MyPy - ä¸¥æ ¼ä½†å®žç”¨çš„ç±»åž‹æ£€æŸ¥
# =============================================================================
[tool.mypy]
python_version = "3.11"
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
color_output = true

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ä¸¥æ ¼æ¨¡å¼ - å¼€å¯åŸºç¡€ä¸¥æ ¼æ£€æŸ¥
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
strict = true

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# å…³é”®è°ƒæ•´ - å…³é—­å¯¹Anyçš„è¿‡åº¦é™åˆ¶
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# è¿™äº›é€‰é¡¹ä¸Žç¬¬ä¸‰æ–¹åº“ï¼ˆnumpy/pandasï¼‰ä¸å…¼å®¹
disallow_any_unimported = false   # ç¬¬ä¸‰æ–¹åº“ç¼ºå°‘ç±»åž‹å­˜æ ¹
disallow_any_expr = false         # numpy/pandasè¿”å›žAny
disallow_any_decorated = false    # è£…é¥°å™¨ç±»åž‹å¤æ‚
disallow_any_explicit = false     # æœ‰æ—¶éœ€è¦æ˜¾å¼Any

# ä¿æŒè¿™äº›ä¸¥æ ¼æ£€æŸ¥
disallow_any_generics = true      # æ³›åž‹å¿…é¡»æŒ‡å®šç±»åž‹å‚æ•°
disallow_subclassing_any = true   # ç¦æ­¢ç»§æ‰¿Anyç±»åž‹

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# å‡½æ•°å’Œç±»åž‹æ£€æŸ¥
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false  # æ”¾å®½ï¼Œå¾ˆå¤šè£…é¥°å™¨æ²¡æœ‰ç±»åž‹
check_untyped_defs = true

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# å…¶ä»–æ£€æŸ¥
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
strict_equality = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true

# å‘½åç©ºé—´
namespace_packages = true
explicit_package_bases = true

# å¢žé‡ç¼–è¯‘
incremental = true
cache_dir = ".cache/mypy"

# æ’ä»¶
plugins = [
    "pydantic.mypy",
]

exclude = [
    "build/",
    "dist/",
    ".venv/",
    "__pycache__/",
]

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# æ¨¡å—çº§é…ç½® - åˆ†å±‚ä¸¥æ ¼åº¦
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

# ðŸ”´ æ ¸å¿ƒäº¤æ˜“æ¨¡å— - æœ€ä¸¥æ ¼ï¼ˆèµ„é‡‘å®‰å…¨ç›¸å…³ï¼‰
[[tool.mypy.overrides]]
module = [
    "src.trading.*",
    "src.execution.*",
    "src.risk.*",
    "src.broker.*",
    "src.gateway.*",
    "src.order.*",
    "src.position.*",
    "src.account.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unreachable = true
# è¿™äº›æ¨¡å—çš„Anyä½¿ç”¨éœ€è¦ç‰¹åˆ«æ³¨æ„
disallow_any_generics = true

# ðŸŸ¡ æ•°æ®å’Œç­–ç•¥æ¨¡å— - ä¸¥æ ¼
[[tool.mypy.overrides]]
module = [
    "src.data.*",
    "src.strategy.*",
    "src.backtesting.*",
    "src.market.*",
    "src.config.*",
]
disallow_untyped_defs = true

# ðŸŸ¢ è¾…åŠ©æ¨¡å— - æ ‡å‡†
[[tool.mypy.overrides]]
module = [
    "src.utils.*",
    "src.common.*",
    "src.simulation.*",
]
disallow_untyped_defs = true

# ðŸ”µ AI/ML/å¯è§†åŒ– - æ”¾å®½ï¼ˆå¤§é‡ä½¿ç”¨numpy/pandasï¼‰
[[tool.mypy.overrides]]
module = [
    "src.ai.*",
    "src.ml.*",
    "src.analytics.*",
    "src.visualization.*",
    "src.optimization.*",
    "src.performance.*",
    "src.portfolio.*",
]
disallow_untyped_defs = false  # æ”¾å®½
disallow_any_generics = false
warn_return_any = false

# âšª æµ‹è¯•æ¨¡å— - å®½æ¾
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_any_generics = false
warn_unreachable = false
warn_return_any = false

# âšª è„šæœ¬æ¨¡å— - å®½æ¾
[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ç¬¬ä¸‰æ–¹åº“ - å¿½ç•¥ç¼ºå¤±çš„ç±»åž‹å­˜æ ¹
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
[[tool.mypy.overrides]]
module = [
    "ctp",
    "ctp.*",
    "thostmduserapi",
    "thostmduserapi.*",
    "thosttraderapi",
    "thosttraderapi.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "talib",
    "talib.*",
    "pandas_ta",
    "pandas_ta.*",
    "shap",
    "shap.*",
    "xgboost",
    "xgboost.*",
    "lightgbm",
    "lightgbm.*",
    "scipy.optimize",
    "scipy.stats",
]
ignore_missing_imports = true

# Pydanticæ’ä»¶é…ç½®
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# =============================================================================
# ðŸ§ª Pytest - å®žç”¨çš„æµ‹è¯•é…ç½®
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    # ä¸¥æ ¼æ¨¡å¼
    "--strict-markers",
    "--strict-config",
    
    # è¦†ç›–çŽ‡ - åˆç†ç›®æ ‡
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:reports/coverage",
    "--cov-report=xml:reports/coverage.xml",
    "--cov-fail-under=85",  # æ•´ä½“85%ï¼Œæ ¸å¿ƒæ¨¡å—å•ç‹¬æŽ§åˆ¶
    
    # è¾“å‡º
    "-v",
    "--tb=short",
    
    # è¶…æ—¶ä¿æŠ¤
    "--timeout=300",
    "--timeout_method=thread",
    
    # æ—¥å¿—
    "--log-cli-level=WARNING",
]

# æµ‹è¯•æ ‡è®°
markers = [
    # é€Ÿåº¦åˆ†ç±»
    "slow: æ…¢é€Ÿæµ‹è¯•ï¼ˆ>5ç§’ï¼‰",
    "fast: å¿«é€Ÿæµ‹è¯•ï¼ˆ<1ç§’ï¼‰",
    
    # ç±»åž‹åˆ†ç±»
    "unit: å•å…ƒæµ‹è¯•",
    "integration: é›†æˆæµ‹è¯•",
    "e2e: ç«¯åˆ°ç«¯æµ‹è¯•",
    
    # äº¤æ˜“ç›¸å…³
    "live: å®žç›˜æµ‹è¯•ï¼ˆéœ€äº¤æ˜“æ‰€è¿žæŽ¥ï¼‰",
    "paper: æ¨¡æ‹Ÿç›˜æµ‹è¯•",
    "backtest: å›žæµ‹æµ‹è¯•",
    
    # æ¨¡å—åˆ†ç±»
    "trading: äº¤æ˜“æ¨¡å—",
    "risk: é£ŽæŽ§æ¨¡å—",
    "strategy: ç­–ç•¥æ¨¡å—",
    "data: æ•°æ®æ¨¡å—",
    
    # ç‰¹æ®Š
    "skip_ci: CIè·³è¿‡",
    "requires_ctp: éœ€è¦CTP SDK",
    "requires_gpu: éœ€è¦GPU",
]

# è­¦å‘Šå¤„ç† - åˆç†çš„è­¦å‘Šç­–ç•¥
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    # å¿½ç•¥ç¬¬ä¸‰æ–¹åº“çš„è­¦å‘Š
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:importlib.*",
    "ignore::PendingDeprecationWarning:pandas.*",
]

# å¼‚æ­¥
asyncio_mode = "auto"

# =============================================================================
# ðŸ“Š Coverage - åˆ†å±‚è¦†ç›–çŽ‡è¦æ±‚
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
relative_files = true
data_file = ".coverage"
dynamic_context = "test_function"

omit = [
    # å…¥å£å’Œè„šæœ¬
    "src/**/cli/*",
    "src/**/scripts/*",
    "src/**/__main__.py",
    
    # ç±»åž‹å­˜æ ¹
    "*.pyi",
    
    # é…ç½®
    "conftest.py",
    "tests/*",
]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# æ•´ä½“ç›®æ ‡ï¼š85%
# æ ¸å¿ƒæ¨¡å—é€šè¿‡CIå•ç‹¬æ£€æŸ¥è¾¾åˆ°æ›´é«˜æ ‡å‡†
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
fail_under = 85
precision = 2
show_missing = true
skip_covered = true
skip_empty = true

# æŽ’é™¤è¡Œ
exclude_lines = [
    # æ ‡å‡†æŽ’é™¤
    "pragma: no cover",
    
    # ç±»åž‹æ£€æŸ¥å—
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    
    # æŠ½è±¡æ–¹æ³•
    "@abstractmethod",
    "@abc.abstractmethod",
    "raise NotImplementedError",
    
    # ä¸»å…¥å£
    'if __name__ == "__main__":',
    
    # é˜²å¾¡æ€§ä»£ç 
    "raise AssertionError",
    "assert False",
    
    # è°ƒè¯•/å±•ç¤ºæ–¹æ³•
    "def __repr__",
    "def __str__",
    
    # å¯é€‰çš„æ—¥å¿—
    "logger\\.debug",
    "logging\\.debug",
]

partial_branches = [
    "pragma: no branch",
]

[tool.coverage.html]
directory = "reports/coverage/html"
title = "cn-futures-auto-trader Coverage Report"
show_contexts = true

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"


# =============================================================================
# ðŸ”¥ Semgrep - å®‰å…¨å’Œä»£ç è´¨é‡æ‰«æ
# =============================================================================
[tool.semgrep]
# è¿™æ˜¯å‚è€ƒé…ç½®ï¼Œå®žé™…ä½¿ç”¨éœ€åœ¨CIä¸­é…ç½®
rules = [
    "p/python",
    "p/security-audit",
    "p/secrets",
    "p/sql-injection",
    "p/xss",
    "p/command-injection",
]
# =============================================================================
# ðŸ“ Pylint - è¡¥å……æ£€æŸ¥ï¼ˆä¸ŽRuffé…åˆï¼‰
# =============================================================================
[tool.pylint.main]
jobs = 0
fail-under = 8.5  # åˆç†çš„è¯„åˆ†è¦æ±‚
py-version = "3.11"
suggestion-mode = true
ignore-patterns = ["test_.*\\.py", "conftest\\.py"]

[tool.pylint.messages_control]
# åªå¯ç”¨Ruffä¸è¦†ç›–çš„æœ‰ä»·å€¼æ£€æŸ¥
enable = [
    "useless-suppression",
]

# ç¦ç”¨ä¸ŽRuffé‡å¤çš„æ£€æŸ¥
disable = [
    # Ruffå·²è¦†ç›–
    "line-too-long",
    "missing-module-docstring",
    "missing-class-docstring", 
    "missing-function-docstring",
    "wrong-import-order",
    "ungrouped-imports",
    "wrong-import-position",
    "invalid-name",
    "too-few-public-methods",
    
    # ä¸Žä¸šåŠ¡éœ€æ±‚å†²çª
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-instance-attributes",
    "too-many-public-methods",
    
    # å®žç”¨ä¸»ä¹‰
    "fixme",
    "broad-except",
    "bare-except",
]

[tool.pylint.format]
max-line-length = 120
max-module-lines = 1500

[tool.pylint.design]
max-args = 8
max-attributes = 20
max-branches = 15
max-locals = 20
max-returns = 8
max-statements = 60

# =============================================================================
# ðŸ“– Interrogate - æ–‡æ¡£è¦†ç›–çŽ‡
# =============================================================================
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
fail-under = 80  # å…¬å…±API 80%æ–‡æ¡£è¦†ç›–
exclude = ["tests", "scripts", "docs", ".venv"]
verbose = 0
quiet = false
color = true

# =============================================================================
# ðŸ”¥ Hatch - æž„å»ºç³»ç»Ÿé…ç½®
# =============================================================================
[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.github",
    "/.venv",
    "/tests",
    "/scripts",
    "/docs",
    "/reports",
    "/.cache",
    "*.pyc",
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

# =============================================================================
# ðŸ“‹ Commitizen - æäº¤è§„èŒƒ
# =============================================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
version_files = [
    "pyproject.toml:version",
]
tag_format = "v$version"
update_changelog_on_bump = true


# =============================================================================
# ðŸ”¥ çŽ¯å¢ƒé…ç½®
# =============================================================================
[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.2",
    "mypy>=1.7",
    "ruff>=0.1.6",
]

[tool.hatch.envs.default.scripts]
# è´¨é‡æ£€æŸ¥è„šæœ¬
lint = "ruff check src tests"
format = "ruff format src tests"
typecheck = "mypy src"
test = "pytest"
all = ["lint", "typecheck", "test"]

[tool.hatch.envs.strict]
# ä¸¥æ ¼æ£€æŸ¥çŽ¯å¢ƒ
template = "default"
extra-dependencies = [
    "pylint>=3.0",
    "bandit>=1.7",
    "vulture>=2.10",
    "interrogate>=1.5",
    "deptry>=0.12",
]

[tool.hatch.envs.strict.scripts]
full-check = [
    "ruff check src --exit-non-zero-on-fix",
    "mypy src --strict",
    "pylint src",
    "bandit -r src",
    "vulture src",
    "interrogate src",
    "deptry src",
    "pytest --cov-fail-under=100",
]
